# torchmd-net

./: pyproject.toml  unnamed.patch
examples/: CMRET-Butene.yaml  EDS-Alkins.yaml  EDS-MD17.yaml  EG-MD17.yaml  ET-Butene.yaml  ET-MD17.yaml  ET-MLP-MD17.yaml  MLP-Butene.yaml  MLP-MD17.yaml  MLP-QM9.yaml  harry-setting.yaml
examples/Butene-New/: forces.sh  pos.sh
examples/Butene-New/processed/: data_0.pt  data_1.pt  data_10.pt  data_100.pt  data_1000.pt  data_1001.pt  data_1002.pt  data_1003.pt  data_1004.pt  (+9892 more)
examples/Pentene/: forces.sh  pos.sh
experiments/: FT.ipynb  exp.ipynb
experiments/per_atom_energies/: butene_per_atom_energies.csv
per_atom_energies/: butene_per_atom_energies.csv  pentene_per_atom_energies.csv  pentene_per_atom_energies_every5steps.csv
tests/: utils.py
torchmdnet/: data.py  module.py  utils.py
torchmdnet/datasets/: __init__.py  md17.py  md_custom.py
torchmdnet/models/: SAGEConv GNN Deepset.ipynb  __init__.py  cmret.py  deepset-2.py  deepset-harry.ipynb  deepset.py  mlp_deepset.py  model.py  output_modules.py  utils.py
torchmdnet/scripts/: train.py
wandb/: latest-run
wandb/run-20250320_112126-yumfz95b/: run-yumfz95b.wandb
wandb/run-20250320_114053-gkxqxshw/: run-gkxqxshw.wandb
wandb/run-20250320_115727-jep5ocz4/: run-jep5ocz4.wandb
wandb/run-20250320_115836-ntzbcn2t/: run-ntzbcn2t.wandb
wandb/run-20250320_120006-opdeyuod/: run-opdeyuod.wandb
wandb/run-20250320_120255-nxye4xxs/: run-nxye4xxs.wandb
wandb/run-20250320_120548-xm6u6i8f/: run-xm6u6i8f.wandb
wandb/run-20250320_121520-fixsmk3w/: run-fixsmk3w.wandb
(+70020 files in other folders)
