[project]
name = "torchmd-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.0.post0",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "tdqm>=0.0.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchmetrics>=1.6.1",
]
